# wordler

./: .gitignore  README.md  environment.yml  get_five_letter_words.py  get_words.sh  makefile  pyproject.toml  wordler.py
src/wordler/: wordler.py
tests/: test_wordler.py
wordler/: __init__.py  wordler.py
