
[tool.poetry]
name = "wordler"
version = "0.1.0"
description = "Helps to solve wordle puzzles."
authors = ["Eric Parkin <eric.parkin@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
pylint = "^2.13.8"
isort = "^5.10.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
